--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^6.36.5",
     "inngest": "^3.41.0",
     "mongoose": "^8.21.0",
-    "next": "15.2.3",
+    "next": "^16.1.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.5.1"
