--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
     "inngest": "^3.41.0",
     "mongoose": "^8.21.0",
     "next": "^16.1.1",
