--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
     "inngest": "^3.41.0",
