--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
@@ -18,7 +19,9 @@
     "next": "^16.1.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-hot-toast": "^2.5.1"
+    "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.5.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
