--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.5.1",
+    "recharts": "^3.6.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
